--- a/frontEnd/pages/dashboard/dashboard.html
+++ b/frontEnd/pages/dashboard/dashboard.html
@@ -59,7 +59,7 @@
 
                 <div class="menu-section user-info-section">
                     <div class="user-info">
-                        <div class="user-avatar">JD</div>
+                        <div class="user-avatar">CS</div>
                         <div class="user-details">
                             <div class="user-name">JOHN DOE</div>
                             <div class="user-status">HUAWEI GT 2 CONNECTED</div>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="widget-content">
                     <div class="user-profile">
-                        <div class="user-avatar">JD</div>
+                        <div class="user-avatar">CS</div>
                         <div class="user-details">
                             <span class="user-name">JOHN DOE</span>
                             <span class="user-email">john.doe@email.com</span>
