--- a/frontEnd/pages/profile/profile.html
+++ b/frontEnd/pages/profile/profile.html
@@ -50,7 +50,7 @@
 
                 <div class="menu-section user-info-section">
                     <div class="user-info">
-                        <div class="user-avatar">JD</div>
+                        <div class="user-avatar">CS</div>
                         <div class="user-details">
                             <div class="user-name">JOHN DOE</div>
                             <div class="user-status">HUAWEI GT 2 CONNECTED</div>
@@ -81,7 +81,7 @@
            
             <h1 class="profile-title">USER PROFILE</h1>
             <div class="profile-avatar-large">
-                <span class="avatar-text">JD</span>
+                <span class="avatar-text">CS</span>
             </div>
         </header>
 
