--- a/frontEnd/pages/stats/stats.html
+++ b/frontEnd/pages/stats/stats.html
@@ -50,7 +50,7 @@
 
                 <div class="menu-section user-info-section">
                     <div class="user-info">
-                        <div class="user-avatar">JD</div>
+                        <div class="user-avatar">CS</div>
                         <div class="user-details">
                             <div class="user-name">JOHN DOE</div>
                             <div class="user-status">GOOGLE FIT CONNECTED</div>
